--- a/style/style.css
+++ b/style/style.css
@@ -12,6 +12,12 @@
   justify-content: center;
   align-items: center;
 }
+.title {
+  font-size: 30px;
+  font-weight: bold;
+  font-family: "New Tegomin", serif;
+  text-align: center;
+}
 
 #board {
   background: linear-gradient(rgb(135, 189, 135), rgb(218, 218, 157));
